--- a/_posts/2022-10-10-project2.md
+++ b/_posts/2022-10-10-project2.md
@@ -1,6 +1,6 @@
 ---
 title : Project2 - 목소리 성별 구별하기
-tags : Python, Machine Learning, Deep Learnign, Project
+tags : Python, Machine_learning, Deep_learning, Project
 ---
 
 # 🧐 개요
